Retaining fragment state [x] Project migrated to androidX [x] Additional logs added [x] Custom Fragment Navigator added

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -2,21 +2,26 @@
 
 <navigation xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
-            xmlns:tools="http://schemas.android.com/tools" android:id="@+id/navigation_graph"
+            xmlns:tools="http://schemas.android.com/tools"
+            android:id="@+id/navigation_graph"
             app:startDestination="@id/actionHome">
 
-    <fragment android:id="@+id/actionHome"
-              android:name="am.chamich.apps.advancedbottomnavigation.HomeFragment"
-              android:label="fragment_home"
-              tools:layout="@layout/fragment_home"/>
+    <retain_state_fragment
+            android:id="@+id/actionHome"
+            android:name="am.chamich.apps.advancedbottomnavigation.HomeFragment"
+            android:label="fragment_home"
+            tools:layout="@layout/fragment_home"/>
 
-    <fragment android:id="@+id/actionFavorites"
-              android:name="am.chamich.apps.advancedbottomnavigation.FavoritesFragment"
-              android:label="fragment_favorites"
-              tools:layout="@layout/fragment_favorites"/>
+    <retain_state_fragment
+            android:id="@+id/actionFavorites"
+            android:name="am.chamich.apps.advancedbottomnavigation.FavoritesFragment"
+            android:label="fragment_favorites"
+            tools:layout="@layout/fragment_favorites"/>
 
-    <fragment android:id="@+id/actionProfile"
-              android:name="am.chamich.apps.advancedbottomnavigation.ProfileFragment"
-              android:label="fragment_profile"
-              tools:layout="@layout/fragment_profile"/>
+    <retain_state_fragment
+            android:id="@+id/actionProfile"
+            android:name="am.chamich.apps.advancedbottomnavigation.ProfileFragment"
+            android:label="fragment_profile"
+            tools:layout="@layout/fragment_profile"/>
+
 </navigation>
