--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<android.support.constraint.ConstraintLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:tools="http://schemas.android.com/tools"
@@ -10,19 +10,18 @@
         tools:context=".MainActivity">
 
     <fragment
-            android:id="@+id/navigationFragment"
+            android:id="@+id/fragment_navigation"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            app:navGraph="@navigation/navigation_graph"
             app:defaultNavHost="true"
-            app:layout_constraintBottom_toTopOf="@+id/bottomnavigation"
+            app:layout_constraintBottom_toTopOf="@+id/bottomnavigation_navigation"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"/>
 
-    <android.support.design.widget.BottomNavigationView
-            android:id="@+id/bottomnavigation"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomnavigation_navigation"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="0dp"
@@ -33,4 +32,4 @@
             app:layout_constraintRight_toRightOf="parent"
             app:menu="@menu/navigation"/>
 
-</android.support.constraint.ConstraintLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
