Adding logic [x] Package structure changed [x] Recycler View added for favorites to have more realistic example [-] SavedInstanceState is still null

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,7 +14,7 @@
 
     <retain_state_fragment
             android:id="@+id/actionFavorites"
-            android:name="am.chamich.apps.advancedbottomnavigation.FavoritesFragment"
+            android:name="am.chamich.apps.advancedbottomnavigation.feature_favorites.FavoritesFragment"
             android:label="fragment_favorites"
             tools:layout="@layout/fragment_favorites"/>
 
