--- a/app/src/main/res/layout/item_favorite.xml
+++ b/app/src/main/res/layout/item_favorite.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<androidx.cardview.widget.CardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginBottom="4dp"
     android:layout_marginTop="4dp"
     android:layout_marginStart="8dp"
@@ -15,7 +15,7 @@
         android:layout_height="match_parent">
 
         <TextView
-            android:text="TextView"
+            tools:text="@tools:sample/full_names"
             android:id="@+id/textview_favorite_name"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
