--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -8,7 +8,7 @@
 
     <retain_state_fragment
             android:id="@+id/actionHome"
-            android:name="am.chamich.apps.advancedbottomnavigation.HomeFragment"
+    § android:name="am.chamich.apps.advancedbottomnavigation.feature_home.HomeFragment"
             android:label="fragment_home"
             tools:layout="@layout/fragment_home"/>
 
@@ -20,7 +20,7 @@
 
     <retain_state_fragment
             android:id="@+id/actionProfile"
-            android:name="am.chamich.apps.advancedbottomnavigation.ProfileFragment"
+            android:name="am.chamich.apps.advancedbottomnavigation.feature_profile.ProfileFragment"
             android:label="fragment_profile"
             tools:layout="@layout/fragment_profile"/>
 
