Refactoring [x] Major Refactoring

--- a/app/src/main/res/navigation/navigation_graph.xml
+++ b/app/src/main/res/navigation/navigation_graph.xml
@@ -14,9 +14,9 @@
 
     <retain_state_fragment
             android:id="@+id/actionFavorites"
-            android:name="am.chamich.apps.advancedbottomnavigation.feature_favorites.FavoritesFragment"
+            android:name="am.chamich.apps.advancedbottomnavigation.feature_favorites.FavoritesContainerFragment"
             android:label="fragment_favorites"
-            tools:layout="@layout/fragment_favorites"/>
+            tools:layout="@layout/fragment_favorites_container"/>
 
     <retain_state_fragment
             android:id="@+id/actionProfile"
